tests/snapshots/gql_snapshots__parse_merge_with_both_actions_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Merge:
        pattern:
          elements:
            - Node:
                variable: p
                labels:
                  - Person
                properties:
                  - - name
                    - String: Alice
                where_clause: ~
        on_create:
          - target:
              variable: p
              property: created
            value:
              Literal:
                Bool: true
        on_match:
          - target:
              variable: p
              property: updated
            value:
              Literal:
                Bool: true
  return_clause: ~
