tests/snapshots/gql_snapshots__parse_merge_with_on_match_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: stmt
---
Mutation:
  match_clause: ~
  optional_match_clauses: []
  where_clause: ~
  mutations:
    - Merge:
        pattern:
          elements:
            - Node:
                variable: p
                labels:
                  - Person
                properties:
                  - - name
                    - String: Alice
                where_clause: ~
        on_create: ~
        on_match:
          - target:
              variable: p
              property: lastSeen
            value:
              Literal:
                String: now
  return_clause: ~
