tests/snapshots/gql_snapshots__parse_min_max_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
optional_match_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Aggregate:
          func: Min
          distinct: false
          expr:
            Property:
              variable: n
              property: age
      alias: ~
    - expression:
        Aggregate:
          func: Max
          distinct: false
          expr:
            Property:
              variable: n
              property: age
      alias: ~
group_by_clause: ~
order_clause: ~
limit_clause: ~
