tests/snapshots/gql_snapshots__parse_order_by_multiple_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
            where_clause: ~
optional_match_clauses: []
with_path_clause: ~
unwind_clauses: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause:
  items:
    - expression:
        Property:
          variable: n
          property: age
      descending: true
    - expression:
        Property:
          variable: n
          property: name
      descending: false
limit_clause: ~
