tests/snapshots/gql_snapshots__parse_order_by_single_snapshot.snap
---
source: tests/gql_snapshots.rs
expression: ast
---
match_clause:
  patterns:
    - elements:
        - Node:
            variable: n
            labels:
              - Person
            properties: []
where_clause: ~
return_clause:
  distinct: false
  items:
    - expression:
        Variable: n
      alias: ~
group_by_clause: ~
order_clause:
  items:
    - expression:
        Property:
          variable: n
          property: age
      descending: false
limit_clause: ~
